<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/container"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Name"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <EditText
        android:id="@+id/authorEdittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Author"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <EditText
        android:id="@+id/yearEdittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Year"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/authorEdittext" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/teal_200"
        android:text="Save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/yearEdittext" />
</androidx.constraintlayout.widget.ConstraintLayout>